@@ -1,6 +1,0 @@
-{
-    "files.associations": {
-        "array": "cpp",
-        "cstdint": "cpp"
-    }
-}
