@@ -2,8 +2,10 @@
 
 #include "Searcher.h"
 
-Searcher::Searcher() : pos() {
+Searcher::Searcher() : pos(), eva(), tim() {
     nodes = 0ULL;
+    hardNodeMax = ~0ULL;
+    lifeNodes = 0ULL;
 
     bestMove = Move::Invalid;
 
@@ -36,6 +38,19 @@ void Searcher::revokeMove(const Move& m){
 
 void Searcher::newGame(){
     pos.setStartPos();
+    pvt.clearAll();
+}
+
+void Searcher::maybeForceStop(){
+    if (tim.timeKept and (nodes % 2048 == 0)){
+        if (tim.exceedHard()){
+            throw "Hard Time Limit\n";
+        }
+    }
+
+    if (nodes > hardNodeMax){
+        throw "Nodes Exceeded\n";
+    }
 }
 
 Score Searcher::alphabeta(Score alpha, Score beta, Depth depth, Index ply){
@@ -71,6 +86,9 @@ Score Searcher::alphabeta(Score alpha, Score beta, Depth depth, Index ply){
     Count moveCount = gen.generateMoves(moves);
 
     for (Index i = 0; i < moveCount; i++){
+
+        maybeForceStop();
+
         bool legal = invokeMove(moves[i]);
         if (!legal){ continue; }
 
@@ -106,29 +124,103 @@ Score Searcher::alphabeta(Score alpha, Score beta, Depth depth, Index ply){
     return bestScore;
 }
 
-Score Searcher::search(){
+Score Searcher::search(Depth depthLim, uint64_t nodeLim, bool output){
     eva.refresh();
     nodes = 0;
-    moment = std::chrono::steady_clock::now();
 
-    pvt.clearAll();
+    std::array<Bitboard, 2> sidesi = pos.sides;
+    std::array<Bitboard, 6> piecesi = pos.pieces;
+    Color toMovei = pos.toMove;
+    Index clocki = pos.clock;
 
-    Score result = alphabeta(-SCORE_INF, SCORE_INF, 6, 0);
+    tim.start();
+    hardNodeMax = nodeLim;
 
-    auto end = std::chrono::steady_clock::now();
-    double dur = 1 + std::chrono::duration_cast<std::chrono::microseconds>(end - moment).count();
-    int nps = (nodes / dur) * 1000000;
-    int time = dur / 1000; //in ms
+    Score searchScore;
+    Move currentBest(Move::Invalid);
 
-    std::cout << "info depth 6 score cp " << result << " nodes " << nodes;
-    std::cout << " nps " << nps << " time " << time;
-    std::cout << " pv ";
-    for (int i = 0; i < pvt.heights[0]; i++){
-        std::cout << pos.moveName(pvt.vars[i]) << ' ';
+    depthLim = std::min(MAX_PLY, depthLim);
+
+    int64_t dur;
+    int64_t nps;
+
+    try {
+        for (Depth d = 1; d <= depthLim; d++){
+            searchScore = alphabeta(-SCORE_INF, SCORE_INF, d, 0);
+            
+            currentBest = bestMove;
+            if (output){
+                std::cout << "info depth " << (int)d << " score cp " << searchScore 
+                    << " nodes " << nodes;
+
+                dur = tim.elapsed();
+                nps = 1000000 * nodes / dur;
+
+                std::cout << " nps " << nps << " time " << (dur / 1000);
+                std::cout << " pv ";
+                for (int i = 0; i < pvt.heights[0]; i++){
+                    std::cout << pos.moveName(pvt.vars[i]) << ' ';
+                }
+                std::cout << std::endl;
+            }
+
+            if (tim.timeKept and tim.exceedSoft()){
+                //std::cout << "Soft\n";
+                break;
+            }
+        }
+    } catch (const char* e){
+        //std::cout << e << '\n';
+        bestMove = currentBest;
     }
-    std::cout << std::endl;
 
-    std::cout << "bestmove " << pos.moveName(bestMove) << std::endl;
+    if (output){
+        dur = tim.elapsed();
+        nps = 1000000 * nodes / dur;
 
-    return result;
+        std::cout << "info nodes " << nodes << " nps " << nps << std::endl;
+        std::cout << "bestmove " << pos.moveName(bestMove) << std::endl;
+    }
+
+    pos.sides = sidesi;
+    pos.pieces = piecesi;
+    pos.toMove = toMovei;
+    pos.clock = clocki;
+
+    lifeNodes += nodes;
+
+    return searchScore;
 }
+
+void Searcher::bench(){
+    std::string marks[8] = {
+        "rnbqkbnr/pppppppp/8/8/8/8/PPPPPPPP/RNBQKBNR w KQkq - 0 1",
+        "r1bqkb1r/2p2ppp/p1np1n2/1p2p3/4P3/1B3N2/PPPP1PPP/RNBQR1K1 b kq - 1 7",
+        "3r2k1/2pr2p1/p2bpn1p/Pp2p3/1Pq1P3/2PR1N1P/2Q2PP1/2B1R1K1 w - - 5 28",
+        "2r1qrk1/1b1n2p1/1p1ppn1p/p1p2p2/P1PP4/2PBPP2/2Q2NPP/2B1RRK1 b - - 1 10",
+        "6k1/5pp1/4n3/3p4/r6Q/6P1/q4PBP/3R3K w - - 0 35",
+        "6k1/6p1/5p1p/pR1b4/P1r5/4PN2/2P3PP/6K1 b - - 2 35",
+        "8/8/5k2/8/8/6P1/6K1/8 w - - 0 57",
+        "6k1/8/6p1/8/8/6P1/4qQKP/8 b - - 5 49"
+    };
+
+    auto benchStart = std::chrono::steady_clock::now();
+
+    for (std::string tester : marks){
+        newGame();
+        pos.readFen(tester);
+        search(7, ~0ULL, false);
+    }
+
+    auto benchEnd = std::chrono::steady_clock::now();
+    int64_t dur = 1 + std::chrono::duration_cast<std::chrono::microseconds>(benchEnd - benchStart).count();
+    int64_t nps = 1000000 * lifeNodes / dur;
+
+    std::cout << lifeNodes << " nodes " << nps << " nps " << std::endl;
+}
+
+
+
+
+
+
